add ansem leaderboard & adjust insights api
